@@ -23,6 +23,7 @@ import java.io.File;
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
+import java.lang.invoke.MethodHandles;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Date;
@@ -30,7 +31,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Random;
-import org.apache.commons.io.IOUtils;
 import org.apache.lucene.tests.util.TestUtil;
 import org.apache.solr.SolrTestCaseJ4;
 import org.apache.solr.common.EnumFieldValue;
@@ -42,8 +42,11 @@ import org.apache.solr.util.ConcurrentLRUCache;
 import org.apache.solr.util.RTimer;
 import org.junit.Test;
 import org.noggit.CharArr;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 public class TestJavaBinCodec extends SolrTestCaseJ4 {
+  private static final Logger log = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
 
   private static final String SOLRJ_JAVABIN_BACKCOMPAT_BIN = "/solrj/javabin_backcompat.bin";
   private static final String BIN_FILE_LOCATION =
@@ -103,6 +106,20 @@ public class TestJavaBinCodec extends SolrTestCaseJ4 {
     parentDocument.addChildDocument(secondKid);
 
     return parentDocument;
+  }
+
+  @Test
+  public void testPrimitiveArrays() throws Exception {
+    List<Object> types = new ArrayList<>();
+
+    types.add(new float[] {1.0678f, 4.094565f, 0.000456f});
+    types.add(new double[] {1.0678d, 4.094565d, 0.000456d});
+    types.add(new int[] {145543, 4546354, 9789857});
+    types.add(new long[] {145543L, 4546354L, 9789857L});
+    types.add(new short[] {43, 454, 857});
+    types.add(new boolean[] {true, true, false});
+
+    compareObjects((List<?>) getObject(getBytes(types)), types);
   }
 
   private List<Object> generateAllDataTypes() {
@@ -194,36 +211,51 @@ public class TestJavaBinCodec extends SolrTestCaseJ4 {
               }
             }; ) {
       @SuppressWarnings({"unchecked"})
-      List<Object> unmarshaledObj = (List<Object>) javabin.unmarshal(is);
+      List<Object> unmarshalledObj = (List<Object>) javabin.unmarshal(is);
       List<Object> matchObj = generateAllDataTypes();
-      compareObjects(unmarshaledObj, matchObj);
+      compareObjects(unmarshalledObj, matchObj);
     } catch (IOException e) {
       throw e;
     }
   }
 
-  private void compareObjects(List<?> unmarshaledObj, List<?> matchObj) {
-    assertEquals(unmarshaledObj.size(), matchObj.size());
-    for (int i = 0; i < unmarshaledObj.size(); i++) {
+  private void compareObjects(List<?> unmarshalledObj, List<?> matchObj) {
+    assertEquals(unmarshalledObj.size(), matchObj.size());
+    for (int i = 0; i < unmarshalledObj.size(); i++) {
 
-      if (unmarshaledObj.get(i) instanceof byte[] && matchObj.get(i) instanceof byte[]) {
-        byte[] b1 = (byte[]) unmarshaledObj.get(i);
-        byte[] b2 = (byte[]) matchObj.get(i);
-        assertTrue(Arrays.equals(b1, b2));
-      } else if (unmarshaledObj.get(i) instanceof SolrDocument
+      if (unmarshalledObj.get(i) instanceof byte[] b1 && matchObj.get(i) instanceof byte[] b2) {
+        assertArrayEquals(b1, b2);
+      } else if (unmarshalledObj.get(i) instanceof SolrDocument
           && matchObj.get(i) instanceof SolrDocument) {
-        assertTrue(compareSolrDocument(unmarshaledObj.get(i), matchObj.get(i)));
-      } else if (unmarshaledObj.get(i) instanceof SolrDocumentList
+        assertTrue(compareSolrDocument(unmarshalledObj.get(i), matchObj.get(i)));
+      } else if (unmarshalledObj.get(i) instanceof SolrDocumentList
           && matchObj.get(i) instanceof SolrDocumentList) {
-        assertTrue(compareSolrDocumentList(unmarshaledObj.get(i), matchObj.get(i)));
-      } else if (unmarshaledObj.get(i) instanceof SolrInputDocument
+        assertTrue(compareSolrDocumentList(unmarshalledObj.get(i), matchObj.get(i)));
+      } else if (unmarshalledObj.get(i) instanceof SolrInputDocument
           && matchObj.get(i) instanceof SolrInputDocument) {
-        assertTrue(compareSolrInputDocument(unmarshaledObj.get(i), matchObj.get(i)));
-      } else if (unmarshaledObj.get(i) instanceof SolrInputField
+        assertTrue(compareSolrInputDocument(unmarshalledObj.get(i), matchObj.get(i)));
+      } else if (unmarshalledObj.get(i) instanceof SolrInputField
           && matchObj.get(i) instanceof SolrInputField) {
-        assertTrue(assertSolrInputFieldEquals(unmarshaledObj.get(i), matchObj.get(i)));
+        assertTrue(assertSolrInputFieldEquals(unmarshalledObj.get(i), matchObj.get(i)));
+      } else if (unmarshalledObj.get(i) instanceof float[] a
+          && matchObj.get(i) instanceof float[] e) {
+        assertArrayEquals(e, a, 0.000000f);
+      } else if (unmarshalledObj.get(i) instanceof double[] a
+          && matchObj.get(i) instanceof double[] e) {
+        assertArrayEquals(e, a, 0.000000d);
+      } else if (unmarshalledObj.get(i) instanceof long[] a
+          && matchObj.get(i) instanceof long[] e) {
+        assertArrayEquals(e, a);
+      } else if (unmarshalledObj.get(i) instanceof int[] a && matchObj.get(i) instanceof int[] e) {
+        assertArrayEquals(e, a);
+      } else if (unmarshalledObj.get(i) instanceof short[] a
+          && matchObj.get(i) instanceof short[] e) {
+        assertArrayEquals(e, a);
+      } else if (unmarshalledObj.get(i) instanceof boolean[] a
+          && matchObj.get(i) instanceof boolean[] e) {
+        assertArrayEquals(e, a);
       } else {
-        assertEquals(unmarshaledObj.get(i), matchObj.get(i));
+        assertEquals(unmarshalledObj.get(i), matchObj.get(i));
       }
     }
   }
@@ -252,21 +284,17 @@ public class TestJavaBinCodec extends SolrTestCaseJ4 {
         ByteArrayOutputStream os = new ByteArrayOutputStream()) {
 
       Object data = generateAllDataTypes();
-      try {
-        javabin.marshal(data, os);
-        byte[] newFormatBytes = os.toByteArray();
+      javabin.marshal(data, os);
+      byte[] newFormatBytes = os.toByteArray();
 
-        InputStream is = getClass().getResourceAsStream(SOLRJ_JAVABIN_BACKCOMPAT_BIN);
-        byte[] currentFormatBytes = IOUtils.toByteArray(is);
-
+      try (InputStream is = getClass().getResourceAsStream(SOLRJ_JAVABIN_BACKCOMPAT_BIN)) {
+        assertNotNull(is);
+        byte[] currentFormatBytes = is.readAllBytes();
         for (int i = 1;
             i < currentFormatBytes.length;
             i++) { // ignore the first byte. It is version information
           assertEquals(newFormatBytes[i], currentFormatBytes[i]);
         }
-
-      } catch (IOException e) {
-        throw e;
       }
     }
   }
@@ -279,15 +307,16 @@ public class TestJavaBinCodec extends SolrTestCaseJ4 {
       javabin.marshal(sdoc, os);
       byte[] newFormatBytes = os.toByteArray();
 
-      InputStream is = getClass().getResourceAsStream(SOLRJ_JAVABIN_BACKCOMPAT_BIN_CHILD_DOCS);
-      byte[] currentFormatBytes = IOUtils.toByteArray(is);
+      try (InputStream is =
+          getClass().getResourceAsStream(SOLRJ_JAVABIN_BACKCOMPAT_BIN_CHILD_DOCS)) {
+        assertNotNull(is);
+        byte[] currentFormatBytes = is.readAllBytes();
 
-      // ignore the first byte. It is version information
-      for (int i = 1; i < currentFormatBytes.length; i++) {
-        assertEquals(newFormatBytes[i], currentFormatBytes[i]);
+        // ignore the first byte. It is version information
+        for (int i = 1; i < currentFormatBytes.length; i++) {
+          assertEquals(newFormatBytes[i], currentFormatBytes[i]);
+        }
       }
-    } catch (IOException e) {
-      throw e;
     }
   }
 
@@ -336,7 +365,7 @@ public class TestJavaBinCodec extends SolrTestCaseJ4 {
     // but keeping this in code to make a point, that even the same exact bin file, there could be
     // sub-objects in the key or value of the maps, with types that do not implement equals and in
     // these cases equals would fail as these sub-objects would be equated on their
-    // memory-references which is highly probbale to be unique and hence the top-level map's equals
+    // memory-references which is highly probable to be unique and hence the top-level map's equals
     // will also fail assertNotEquals("2 different references even though from same source are
     // un-equal",entryFromBinFileA,entryFromBinFileA_clone);
 
@@ -564,7 +593,7 @@ public class TestJavaBinCodec extends SolrTestCaseJ4 {
 
   // common-case ascii
   static String str(Random r, int sz) {
-    StringBuffer sb = new StringBuffer(sz);
+    StringBuilder sb = new StringBuilder(sz);
     for (int i = 0; i < sz; i++) {
       sb.append('\n' + r.nextInt(128 - '\n'));
     }
@@ -627,7 +656,7 @@ public class TestJavaBinCodec extends SolrTestCaseJ4 {
             try {
               doDecode(buffers, iter, stringCache);
             } catch (IOException e) {
-              e.printStackTrace();
+              log.error("exception decoding", e);
             }
           });
     }
